tests/deprecated_variance_sigils/deprecated_variance_sigils.exp
Error ----------------------------------------------------------------------------------------------------- test.js:5:17

The `+` variance sigil is deprecated. Use `readonly` or `out` instead. [unsupported-syntax]

   5| type CovObj = { +p: number }; // error: + deprecated
                      ^


Error ----------------------------------------------------------------------------------------------------- test.js:6:20

The `-` variance sigil is deprecated. Use `writeonly` or `in` instead. [unsupported-syntax]

   6| type ContraObj = { -p: number }; // error: - deprecated
                         ^


Error ------------------------------------------------------------------------------------------------------ test.js:8:9

The `+` variance sigil is deprecated. Use `readonly` or `out` instead. [unsupported-syntax]

   8| class A<+T> {} // error: + deprecated
              ^


Error ------------------------------------------------------------------------------------------------------ test.js:9:9

The `-` variance sigil is deprecated. Use `writeonly` or `in` instead. [unsupported-syntax]

   9| class B<-T> {} // error: - deprecated
              ^



Found 4 errors
